---
source: minigu-cli/tests/shell_test.rs
info:
  program: minigu
  args:
    - shell
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Start local interactive shell

Usage: minigu shell [OPTIONS] [PATH]

Arguments:
  [PATH]
          Path to the database directory. If it does not exist, a new database directory will be created.
          
          If not provided, an in-memory database will be opened.

Options:
  -m, --mode <MODE>
          Set output mode
          
          [default: sharp]
          [possible values: sharp, modern, psql, markdown, csv, json]

      --no-header
          If set, the column header will not be printed

      --no-column-type
          If set, column types (in the header) will not be printed

  -r, --read-only
          If set, the database will be opened in read-only mode.
          
          Ignored if an in-memory database is opened.

  -h, --help
          Print help (see a summary with '-h')

----- stderr -----
